# MeshSync

./: .gitattributes  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE.md  LICENSE.txt  Readme.en.md  Readme.md  Readme_EN.md  Readme_JP.md  Third Party Notices.md  package.json  packagingMQ.bat  setup_symlinks.bat
.MeshSync/Plugin/: CMakeLists.txt  MeshSync.vcxproj  MeshSync.vcxproj.filters  MeshSyncClientBlender.vcxproj  MeshSyncClientBlender.vcxproj.filters  MeshSyncClientMQ3.vcxproj  MeshSyncClientMQ3.vcxproj.filters  MeshSyncClientMQ4.vcxproj  MeshSyncClientMQ4.vcxproj.filters  MeshSyncClientMaya.vcxproj  MeshSyncClientMaya.vcxproj.filters  MeshSyncClientModo.vcxproj  MeshSyncClientModo.vcxproj.filters  MeshSyncClientMotionBuilder.vcxproj  MeshSyncClientMotionBuilder.vcxproj.filters  MeshSyncClientVRED.vcxproj  MeshSyncClientVREDHook.vcxproj  MeshSyncServer.vcxproj  MeshSync_3dsMax.bat  MeshSync_All.bat  MeshSync_All.sln  MeshSync_Metasequoia.bat  MeshSync_Modo.bat  MeshSync_MotionBuilder.sln  MeshUtils.vcxproj  MeshUtils.vcxproj.filters  build_max.bat  build_maya.bat  build_modo.bat  build_motionbuilder.bat  build_mq.bat  build_server.bat  make_links.bat  setup.bat  setup.vcxproj  toolchain.bat
Plugin/: CMakeLists.txt  GraphicsInterface.vcxproj  GraphicsInterface.vcxproj.filters  MeshSync.sln  MeshSync.vcxproj  MeshSync.vcxproj.filters  MeshSyncClient3dsMax.vcxproj  MeshSyncClient3dsMax.vcxproj.filters  MeshSyncClientBlender.vcxproj  MeshSyncClientBlender.vcxproj.filters  MeshSyncClientMQ.vcxproj  MeshSyncClientMQ.vcxproj.filters  MeshSyncClientMQ3.vcxproj  MeshSyncClientMQ3.vcxproj.filters  MeshSyncClientMQ4.vcxproj  MeshSyncClientMQ4.vcxproj.filters  MeshSyncClientMaya.vcxproj  MeshSyncClientMaya.vcxproj.filters  MeshSyncClientMotionBuilder.vcxproj  MeshSyncClientMotionBuilder.vcxproj.filters  MeshSyncClientVRED.sln  MeshSyncClientVRED.vcxproj  MeshSyncClientVRED.vcxproj.filters  MeshSyncClientVREDHook.vcxproj  MeshSyncClientVREDHook.vcxproj.filters  MeshSyncClientXismo.vcxproj  MeshSyncClientXismo.vcxproj.filters  MeshSyncClientXismoHook.vcxproj  MeshSyncClientXismoHook.vcxproj.filters  MeshSyncServer.vcxproj  MeshSyncServer.vcxproj.filters  MeshSync_3dsMax.bat  MeshSync_3dsMax.sln  MeshSync_All.bat  MeshSync_All.sln  MeshSync_Blender.bat  MeshSync_Blender.sln  MeshSync_Maya.bat  MeshSync_Maya.sln  MeshSync_MayaLT.bat  (+34 more)
Plugin/CrashReporter/: CrashReporter.cpp  CrashReporter.h
Plugin/GraphicsInterface/: GraphicsInterface.cpp  GraphicsInterface.h  GraphicsInterfaceD3D11.cpp  GraphicsInterfaceD3D12.cpp  GraphicsInterfaceD3D9.cpp  GraphicsInterfaceOpenGL.cpp  GraphicsInterfaceVulkan.cpp  giInternal.cpp  giInternal.h  giUnityPluginImpl.cpp  giUnityPluginImpl.h  pch.h
Plugin/MeshSync/: CMakeLists.txt  MeshSync.h  MeshSyncUtils.h  RawVector.h  msAnimation.cpp  msAnimation.h  msAsset.cpp  msAsset.h  msAudio.cpp  msAudio.h  msClient.cpp  msClient.h  msCommon.cpp  msCommon.h  msConfig.h  msConstraints.cpp  msConstraints.h  msEditing.cpp  msEditing.h  msFoundation.cpp  msFoundation.h  msMaterial.cpp  msMaterial.h  msMisc.h  msProtocol.cpp  msProtocol.h  msSceneCache.cpp  msSceneCache.h  msSceneGraph.cpp  msSceneGraph.h  msSceneGraphImpl.h  msServer.cpp  msServer.h  msTexture.cpp  msTexture.h  pch.cpp  pch.h
Plugin/MeshSyncClient3dsMax/: MeshSyncClient3dsMax.cpp  MeshSyncClient3dsMax.h  msmaxCallbacks.cpp  msmaxCallbacks.h  msmaxEntryPoint.cpp  msmaxUI.cpp  msmaxUI.rc  msmaxUtils.cpp  msmaxUtils.h  pch.h  resource.h
Plugin/MeshSyncClientBlender/: CMakeLists.txt  MeshSyncClientBlender.cpp  MeshSyncClientBlender.h  blender.cpp  msbBinder.cpp  msbBinder.h  msbBlenderUtils.cpp  msbBlenderUtils.h  msbContext.cpp  msbContext.h  msbUtils.cpp  msbUtils.h  pch.cpp  pch.h  unity_mesh_sync.py
Plugin/MeshSyncClientMQ/: CMakeLists.txt  Dialog.cpp  Dialog.h  DialogMQ4.cpp  DialogMQ4.h  MQSync.cpp  MQSync.h  MeshSyncClientMQ.cpp  MeshSyncClientMQ.h  MeshSyncClientMQ3.cpp  MeshSyncClientMQ3.h  MeshSyncClientMQ4.cpp  MeshSyncClientMQ4.h  Sync.cpp  Sync.h  msmqContext.cpp  msmqContext.h  msmqUI4.cpp  msmqUI4.h  msmqUtils.cpp  msmqUtils.h  pch.h
Plugin/MeshSyncClientMaya/: CMakeLists.txt  Commands.cpp  Commands.h  MayaLT.h  MayaLTSupport.h  MayaUtils.cpp  MayaUtils.h  MeshSyncClientMaya.cpp  MeshSyncClientMaya.h  MeshSyncClientMaya_extract.cpp  msmayaCommands.cpp  msmayaCommands.h  msmayaUtils.cpp  msmayaUtils.h  pch.cpp  pch.h
Plugin/MeshSyncClientMotionBuilder/: CMakeLists.txt  MeshSyncClientMotionBuilder.cpp  MeshSyncClientMotionBuilder.h  msmbDevice.cpp  msmbDevice.h  msmbLayout.cpp  msmbLayout.h  msmbUtils.cpp  msmbUtils.h  pch.cpp  pch.h
Plugin/MeshSyncClientVRED/: MeshSyncClientVREDHook.cpp  msvrContext.cpp  msvrContext.h  msvrWidget.cpp  pch.h
Plugin/MeshSyncClientXismo/: MeshSyncClientXismo.cpp  MeshSyncClientXismo.h  MeshSyncClientXismoHook.cpp  QtWidget.cpp  msxmContext.cpp  msxmContext.h  msxmWidget.cpp  pch.h
Plugin/MeshSyncServer/: CMakeLists.txt  pch.h  (+4 more)
Plugin~/: CMakeLists.txt  MeshSync.vcxproj  MeshSync.vcxproj.filters  MeshSyncClient3dsMax.vcxproj  MeshSyncClient3dsMax.vcxproj.filters  MeshSyncClientBlender.vcxproj  MeshSyncClientBlender.vcxproj.filters  MeshSyncClientHoudini.vcxproj  MeshSyncClientHoudini.vcxproj.filters  MeshSyncClientMQ3.vcxproj  MeshSyncClientMQ4.vcxproj  MeshSyncClientMQ4.vcxproj.filters  MeshSyncClientMaya.vcxproj  MeshSyncClientMaya.vcxproj.filters  MeshSyncClientModo.vcxproj  MeshSyncClientMotionBuilder.vcxproj  MeshSyncClientVRED.vcxproj  MeshSyncClientVREDHook.vcxproj  MeshSyncClientXismo.vcxproj  MeshSyncClientXismo.vcxproj.filters  MeshSyncClientXismoHook.vcxproj  MeshSyncClientXismoHook.vcxproj.filters  MeshSyncServer.vcxproj  MeshSyncServer.vcxproj.filters  MeshSync_3dsMax.bat  MeshSync_3dsMax.sln  MeshSync_All.bat  MeshSync_All.sln  MeshSync_Blender.bat  MeshSync_Blender.sln  MeshSync_Houdini.bat  MeshSync_Houdini.sln  MeshSync_Maya.bat  MeshSync_Maya.sln  MeshSync_MayaLT.bat  MeshSync_Metasequoia.bat  MeshSync_Metasequoia.sln  MeshSync_Modo.bat  MeshSync_Modo.sln  MeshSync_MotionBuilder.bat  (+25 more)
(+1400 files in other folders)
