string(REGEX MATCH "([0-9]+)$" MAYA_VERSION "${CMAKE_CURRENT_SOURCE_DIR}")
set(MESHSYNC_CLIENT_MAYA "MeshSyncClientMaya${MAYA_VERSION}")

if(${MAYA_VERSION} STREQUAL "2018")
    find_package(Maya2018)
elseif(${MAYA_VERSION} STREQUAL "2017")
    find_package(Maya2017)
elseif(${MAYA_VERSION} STREQUAL "2016")
    find_package(Maya2016)
endif()

file(GLOB sources *.cpp *.h)
add_library(${MESHSYNC_CLIENT_MAYA} SHARED ${sources})
add_dependencies(${MESHSYNC_CLIENT_MAYA} MeshUtils MeshSync)
target_include_directories(${MESHSYNC_CLIENT_MAYA} PUBLIC "${CMAKE_SOURCE_DIR}" "${MAYA${MAYA_VERSION}_INCLUDE_DIR}")
target_link_libraries(${MESHSYNC_CLIENT_MAYA} MeshSync MeshUtils ${Poco_LIBRARIES} ${MAYA${MAYA_VERSION}_LIBRARIES})
if(LINUX)
    target_link_libraries(${MESHSYNC_CLIENT_MAYA} pthread "-Wl,--no-undefined")
elseif(MAC)
    set_target_properties(${MESHSYNC_CLIENT_MAYA} PROPERTIES COMPILE_FLAGS -DOSMac_)
    set_target_properties(${MESHSYNC_CLIENT_MAYA} PROPERTIES SUFFIX ".bundle")
endif()
set_target_properties(${MESHSYNC_CLIENT_MAYA} PROPERTIES PREFIX "")
set_target_properties(${MESHSYNC_CLIENT_MAYA} PROPERTIES OUTPUT_NAME "MeshSyncClientMaya")

set(INSTALL_DIR "UnityMeshSync for Maya/maya${MAYA_VERSION}_${PLATFORM}")
install(TARGETS ${MESHSYNC_CLIENT_MAYA} DESTINATION ${INSTALL_DIR})
install(DIRECTORY MEL/ DESTINATION ${INSTALL_DIR} FILES_MATCHING PATTERN "*.mel")