file(GLOB sources *.cpp *.h)
set(plugins_dir "${CMAKE_SOURCE_DIR}/../Runtime/Plugins/x86_64")
add_plugin(mscore SOURCES ${sources} PLUGINS_DIR ${plugins_dir})

add_dependencies(mscore MeshUtils)
target_include_directories(mscore PUBLIC "${CMAKE_SOURCE_DIR}")
target_link_libraries(mscore MeshSync MeshUtils ${Poco_LIBRARIES})
if(ENABLE_ZSTD)
    target_link_libraries(mscore ${ZSTD_LIBRARY})
endif()
if(LINUX)
    target_link_libraries(mscore pthread "-Wl,--no-undefined")
endif()
